--- a/Popup Message/readme
+++ b/Popup Message/readme
@@ -1,1 +1,3 @@
 I used the &times to replace the letter X for the cancel button
+How to use z-index
+How to use width and max-width for responsive design
