--- a/Popup Message/readme
+++ b/Popup Message/readme
@@ -2,3 +2,6 @@ I used the &times to replace the letter X for the cancel button
 How to use z-index
 How to use width and max-width for responsive design
 How to use data modals to set buttons and using them on a large scale
+
+Problems:
+Could not remove the grey overlay.
