--- a/Popup Message/readme
+++ b/Popup Message/readme
@@ -2,6 +2,7 @@ I used the &times to replace the letter X for the cancel button
 How to use z-index
 How to use width and max-width for responsive design
 How to use data modals to set buttons and using them on a large scale
+I got the logic on how to link a div with a text
 
 Problems:
 Could not remove the grey overlay.
